--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,36 @@
     text-align: center;
     width: 25%;
 }
+
+.row {
+    display: flex;
+    padding: 0 4;
+    flex-wrap: wrap;
+}
+
+.column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4;
+    box-sizing: content-box;
+}
+
+img {
+    vertical-align: middle;
+    max-width: 100%;
+    margin-top: 8px;
+}
+
+@media only screen and (max-width:800px) {
+    .column {
+        flex-basis: 50%;
+        max-width: 50%;
+    }
+}
+
+@media only screen and (max-width:600px) {
+    .column {
+        flex-basis: 100%;
+        max-width: 100%;
+    }
+}
