--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
+body {
+  background-color: rgb(255, 232, 235);
+}
+
 .heading {
-    background-color: rgb(228, 158, 170);
-    border-radius: 50%;
-    padding: 5px;
-    margin: 0 auto;
-    text-align: center;
-    width: 25%;
+  background-color: rgb(228, 158, 170);
+  border-radius: 50%;
+  padding: 5px;
+  margin: 0 auto;
+  text-align: center;
+  width: 25%;
 }
