--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+}
+
+
 body {
   background-color: rgb(255, 232, 235);
 }
@@ -10,3 +15,30 @@ body {
   text-align: center;
   width: 25%;
 }
+
+.row {
+  display: flex;
+  padding: 0 4px;
+  flex-wrap: wrap;
+  
+
+}
+
+img {
+  flex: 0 1 25%;
+  max-width: 25%;
+  padding: 0 4px;
+  margin-top: 8px;
+}
+
+@media only screen and (max-width: 800px){
+img {
+  max-width: 50%;
+}
+}
+@media only screen and (max-width: 600px){
+  img {
+    max-width: 100%;
+    /* height: auto; */
+  }
+  }
