Adding HTML and CSS files

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+
+*{
+  box-sizing: border-box;
+}
+
 body {
   background-color: rgb(255, 232, 235);
 }
@@ -10,3 +15,34 @@ body {
   text-align: center;
   width: 25%;
 }
+
+.row{
+  display: flex;
+  padding: 0px 4px;
+  flex-wrap: wrap;
+
+}
+
+img{
+  flex-basis: 25%;
+  max-width: 25%;
+  padding: 0px 4px;
+  margin-top: 8px;
+  }
+
+  @media only screen and (max-width: 800px){
+    img{
+      max-width: 50%;
+    }
+    h1{
+      font-size: 50%;
+    }
+  }
+
+  @media only screen and (max-width: 600px){
+    img{
+      max-width: 100%;
+    }
+  }
+
+  
