--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: rgb(255, 232, 235);
 }
@@ -10,3 +14,33 @@ body {
   text-align: center;
   width: 25%;
 }
+
+.row {
+  display: flex;
+  padding: 0px 4px;
+  flex-wrap: wrap;
+}
+
+img {
+  padding: 0px 4px;
+  flex-basis: 25%;
+  max-width: 25%;
+  margin-top: 8px;
+  /* flex-wrap: wrap; */
+}
+
+@media only screen and (max-width: 800px) {
+img { 
+  width: 50%;
+  max-width: 50%;
+  
+}
+}
+
+@media only screen and (max-width: 600px) {
+  img { 
+    width: 100%;
+    max-width: 100%;
+    
+  }
+  }
