--- a/css/styles.css
+++ b/css/styles.css
@@ -28,14 +28,18 @@ margin-top: 8px;
 
 *{box-sizing: border-box;}
 
-@media only screen and (max-width: 800px) {
-  img {flex-basis: 50%;
+@media only screen and (max-width: 800px) 
+{
+  img {
+    flex-basis: 50%;
   max-width: 50%;
   }
 }
 
-@media only screen and (max-width: 600px) {
-  img {flex-basis: 100%;
+@media only screen and (max-width: 600px) 
+{
+  img {
+    flex-basis: 100%;
   max-width: 100%;
   }
 }
